--- a/ionic/bower.json
+++ b/ionic/bower.json
@@ -3,5 +3,9 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.3"
+  },
+  "dependencies": {
+    "angular-oauth2": "^4.1.0",
+    "angular-cookies": "1.5.3"
   }
 }
