--- a/ionic/bower.json
+++ b/ionic/bower.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "angular-oauth2": "^4.1.0",
     "angular-cookies": "1.5.3",
-    "angular-resource": "1.5.3"
+    "angular-resource": "1.5.3",
+    "ngCordova": "^0.1.27-alpha"
   }
 }
