Updat-status Order, Generate rash, Pusher (geoLocation)

--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+PUSHER_APP_ID = 328143
+PUSHER_KEY = afe62afba699f9398ded
+PUSHER_SECRET = 9984255ddc68bbd7763c
