--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "illuminate/html": "^5.0",
         "lucadegasperi/oauth2-server-laravel": "5.1.*",
         "league/fractal": "^0.13.0@dev",
-        "barryvdh/laravel-cors": "0.7.x"
+        "barryvdh/laravel-cors": "0.7.x",
+        "pusher/pusher-php-server": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
