--- a/.env
+++ b/.env
@@ -23,6 +23,6 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID = 328143
-PUSHER_KEY = afe62afba699f9398ded
-PUSHER_SECRET = 9984255ddc68bbd7763c
+PUSHER_KEY=afe62afba699f9398ded
+PUSHER_SECRET=9984255ddc68bbd7763c
+PUSHER_APP_ID=328143
